--- a/website/source/layouts/docs.erb
+++ b/website/source/layouts/docs.erb
@@ -253,6 +253,10 @@
                         <a href="/docs/providers/statuscake/index.html">StatusCake</a>
                     </li>
 
+					<li<%= sidebar_current("docs-providers-softlayer") %>>
+					<a href="/docs/providers/softlayer/index.html">SoftLayer</a>
+					</li>
+
 					<li<%= sidebar_current("docs-providers-template") %>>
 					<a href="/docs/providers/template/index.html">Template</a>
 					</li>
