--- a/website/source/assets/stylesheets/_docs.scss
+++ b/website/source/assets/stylesheets/_docs.scss
@@ -27,6 +27,7 @@ body.layout-fastly,
 body.layout-google,
 body.layout-heroku,
 body.layout-influxdb,
+body.layout-librato,
 body.layout-mailgun,
 body.layout-mysql,
 body.layout-openstack,
