--- a/website/source/layouts/aws.erb
+++ b/website/source/layouts/aws.erb
@@ -543,6 +543,10 @@
                             <a href="/docs/providers/aws/r/db_event_subscription.html">aws_db_event_subscription</a>
                         </li>
 
+                        <li<%= sidebar_current("docs-aws-resource-db-option-group") %>>
+                          <a href="/docs/providers/aws/r/db_option_group.html">aws_db_option_group</a>
+                        </li>
+
                         <li<%= sidebar_current("docs-aws-resource-db-parameter-group") %>>
                             <a href="/docs/providers/aws/r/db_parameter_group.html">aws_db_parameter_group</a>
                         </li>
