--- a/website/source/layouts/aws.erb
+++ b/website/source/layouts/aws.erb
@@ -539,6 +539,10 @@
                             <a href="/docs/providers/aws/r/db_instance.html">aws_db_instance</a>
                         </li>
 
+                        <li<%= sidebar_current("docs-aws-resource-db-event-subscription") %>>
+                            <a href="/docs/providers/aws/r/db_event_subscription.html">aws_db_event_subscription</a>
+                        </li>
+
                         <li<%= sidebar_current("docs-aws-resource-db-parameter-group") %>>
                             <a href="/docs/providers/aws/r/db_parameter_group.html">aws_db_parameter_group</a>
                         </li>
