website: docs for the "random" provider

--- a/website/source/assets/stylesheets/_docs.scss
+++ b/website/source/assets/stylesheets/_docs.scss
@@ -35,6 +35,7 @@ body.layout-openstack,
 body.layout-packet,
 body.layout-postgresql,
 body.layout-powerdns,
+body.layout-random,
 body.layout-rundeck,
 body.layout-statuscake,
 body.layout-softlayer,
