--- a/website/source/layouts/aws.erb
+++ b/website/source/layouts/aws.erb
@@ -10,7 +10,7 @@
                     <a href="/docs/providers/aws/index.html">AWS Provider</a>
                 </li>
 
-                <li<%= sidebar_current(/^docs-aws-datasource/) %>
+                <li<%= sidebar_current(/^docs-aws-datasource/) %>>
                 <a href="#">Data Sources</a>
                     <ul class="nav nav-visible">
                         <li<%= sidebar_current("docs-aws-datasource-availability-zones") %>>
