--- a/website/source/layouts/aws.erb
+++ b/website/source/layouts/aws.erb
@@ -167,7 +167,7 @@
                 </li>
 
 
-                <li<%= sidebar_current(/^docs-aws-resource-(ami|app|autoscaling|ebs|elb|eip|instance|launch|lb|proxy|spot|volume|placement|key-pair)/) %>>
+                <li<%= sidebar_current(/^docs-aws-resource-(ami|app|autoscaling|ebs|elb|eip|instance|launch|lb|proxy|spot|volume|placement|key-pair|elb_attachment)/) %>>
                     <a href="#">EC2 Resources</a>
                     <ul class="nav nav-visible">
 
@@ -221,6 +221,10 @@
 
                         <li<%= sidebar_current("docs-aws-resource-elb") %>>
                             <a href="/docs/providers/aws/r/elb.html">aws_elb</a>
+                        </li>
+
+                        <li<%= sidebar_current("docs-aws-resource-elb-attachment") %>>
+                            <a href="/docs/providers/aws/r/elb_attachment.html">aws_elb</a>
                         </li>
 
                         <li<%= sidebar_current("docs-aws-resource-instance") %>>
