Add Elastic Transcoder docs

--- a/website/source/layouts/aws.erb
+++ b/website/source/layouts/aws.erb
@@ -363,6 +363,21 @@
                     </ul>
                 </li>
 
+                <li<%= sidebar_current(/^docs-aws-resource-elastic-transcoder/) %>>
+                    <a href="#">Elastic Transcoder Resources</a>
+                    <ul class="nav nav-visible">
+
+                        <li<%= sidebar_current("docs-aws-resource-elastic-transcoder-pipeline") %>>
+                            <a href="/docs/providers/aws/r/elastic_transcoder_pipeline.html">aws_elasticsearch_domain</a>
+                        </li>
+
+                        <li<%= sidebar_current("docs-aws-resource-elastic-transcoder-preset") %>>
+                            <a href="/docs/providers/aws/r/elastic_transcoder_preset.html">aws_elasticsearch_domain</a>
+                        </li>
+
+                    </ul>
+                </li>
+
                 <li<%= sidebar_current(/^docs-aws-resource-glacier/) %>>
                     <a href="#">Glacier Resources</a>
                     <ul class="nav nav-visible">
