--- a/website/source/layouts/docs.erb
+++ b/website/source/layouts/docs.erb
@@ -254,6 +254,10 @@
 					<a href="/docs/providers/librato/index.html">Librato</a>
 					</li>
 
+					<li<%= sidebar_current("docs-providers-logentries") %>>
+					<a href="/docs/providers/logentries/index.html">Logentries</a>
+					</li>
+
 					<li<%= sidebar_current("docs-providers-mailgun") %>>
 					<a href="/docs/providers/mailgun/index.html">Mailgun</a>
 					</li>
