provider/azurerm: add client_config data source
azurerm_client_config provides access to:

 - client_id
 - tenant_id
 - subscription_id

```
TF_ACC=1 go test ./builtin/providers/azurerm -v -run TestAccAzureRMClientConfig -timeout 120m
=== RUN   TestAccAzureRMClientConfig_basic
--- PASS: TestAccAzureRMClientConfig_basic (27.79s)
PASS
ok  	github.com/hashicorp/terraform/builtin/providers/azurerm	27.862s
```

--- a/website/source/layouts/azurerm.erb
+++ b/website/source/layouts/azurerm.erb
@@ -11,6 +11,15 @@
               <a href="/docs/providers/azurerm/index.html">Microsoft Azure Provider</a>
             </li>
 
+            <li<%= sidebar_current(/^docs-azurerm-datasource/) %>>
+              <a href="#">Data Sources</a>
+              <ul class="nav nav-visible">
+                <li<%= sidebar_current("docs-azurerm-datasource-client-config-") %>>
+                    <a href="/docs/providers/aws/d/client_config.html">azurerm_client_config</a>
+                </li>
+              </ul>
+            </li>
+
             <li<%= sidebar_current(/^docs-azurerm-resource-resource/) %>>
               <a href="#">Base Resources</a>
               <ul class="nav nav-visible">
