--- a/website/source/layouts/azurerm.erb
+++ b/website/source/layouts/azurerm.erb
@@ -83,6 +83,16 @@
                 </ul>
             </li>
 
+
+            <li<%= sidebar_current(/^docs-azurerm-resource-eventhub/) %>>
+              <a href="#">Event Hubs</a>
+              <ul class="nav nav-visible">
+                <li<%= sidebar_current("docs-azurerm-resource-eventhub-namespace") %>>
+                  <a href="/docs/providers/azurerm/r/eventhub_namespace.html">azurerm_eventhub_namespace</a>
+                </li>
+              </ul>
+            </li>
+
             <li<%= sidebar_current(/^docs-azurerm-resource-key-vault/) %>>
               <a href="#">Key Vault Resources</a>
               <ul class="nav nav-visible">
@@ -90,7 +100,6 @@
                 <li<%= sidebar_current("docs-azurerm-resource-key-vault") %>>
                   <a href="/docs/providers/azurerm/r/key_vault.html">azurerm_key_vault</a>
                 </li>
-
               </ul>
             </li>
 
@@ -224,7 +233,7 @@
 
               </ul>
             </li>
-            
+
             <li<%= sidebar_current(/^docs-azurerm-resource-storage/) %>>
               <a href="#">Storage Resources</a>
               <ul class="nav nav-visible">
