docs/azurerm: Adding ARM Storage Share to the navigation bar (#9594)

--- a/website/source/layouts/azurerm.erb
+++ b/website/source/layouts/azurerm.erb
@@ -254,6 +254,10 @@
                   <a href="/docs/providers/azurerm/r/storage_queue.html">azurerm_storage_queue</a>
                 </li>
 
+                <li<%= sidebar_current("docs-azurerm-resource-storage-share") %>>
+                  <a href="/docs/providers/azurerm/r/storage_share.html">azurerm_storage_share</a>
+                </li>
+
                 <li<%= sidebar_current("docs-azurerm-resource-storage-table") %>>
                   <a href="/docs/providers/azurerm/r/storage_table.html">azurerm_storage_table</a>
                 </li>
