--- a/website/source/layouts/aws.erb
+++ b/website/source/layouts/aws.erb
@@ -66,6 +66,9 @@
                         <li<%= sidebar_current("docs-aws-datasource-region") %>>
                             <a href="/docs/providers/aws/d/region.html">aws_region</a>
                         </li>
+                        <li<%= sidebar_current("docs-aws-datasource-route-table") %>>
+                          <a href="/docs/providers/aws/d/route_table.html">aws_route_table</a>
+                        </li>
                         <li<%= sidebar_current("docs-aws-datasource-s3-bucket-object") %>>
                             <a href="/docs/providers/aws/d/s3_bucket_object.html">aws_s3_bucket_object</a>
                         </li>
