website: document state purpose [GH-10474]

--- a/website/source/layouts/docs.erb
+++ b/website/source/layouts/docs.erb
@@ -157,6 +157,10 @@
 				<li<%= sidebar_current(/^docs-state/) %>>
 					<a href="/docs/state/index.html">State</a>
 					<ul class="nav">
+						<li<%= sidebar_current("docs-state-purpose") %>>
+							<a href="/docs/state/purpose.html">Purpose</a>
+						</li>
+
 						<li<%= sidebar_current("docs-state-import") %>>
 							<a href="/docs/state/import.html">Import Existing Resources</a>
 						</li>
