"external" data source, for integrating with external programs (#8768)
* "external" provider for gluing in external logic

This provider will become a bit of glue to help people interface external
programs with Terraform without writing a full Terraform provider.

It will be nowhere near as capable as a first-class provider, but is
intended as a light-touch way to integrate some pre-existing or custom
system into Terraform.

* Unit test for the "resourceProvider" utility function

This small function determines the dependable name of a provider for
a given resource name and optional provider alias. It's simple but it's
a key part of how resource nodes get connected to provider nodes so
worth specifying the intended behavior in the form of a test.

* Allow a provider to export a resource with the provider's name

If a provider only implements one resource of each type (managed vs. data)
then it can be reasonable for the resource names to exactly match the
provider name, if the provider name is descriptive enough for the
purpose of the each resource to be obvious.

* provider/external: data source

A data source that executes a child process, expecting it to support a
particular gateway protocol, and exports its result. This can be used as
a straightforward way to retrieve data from sources that Terraform
doesn't natively support..

* website: documentation for the "external" provider

--- a/website/source/layouts/docs.erb
+++ b/website/source/layouts/docs.erb
@@ -238,6 +238,10 @@
 					<a href="/docs/providers/dyn/index.html">Dyn</a>
 					</li>
 
+					<li<%= sidebar_current("docs-providers-external") %>>
+					<a href="/docs/providers/external/index.html">External</a>
+					</li>
+
 					<li<%= sidebar_current("docs-providers-github") %>>
 					<a href="/docs/providers/github/index.html">GitHub</a>
 					</li>
